--- a/public/help.html
+++ b/public/help.html
@@ -1,11 +1,16 @@
- <!DOCTYPE html>
- <html lang="en" dir="ltr">
-   <head>
-     <meta charset="utf-8">
-     <title></title>
-   </head>
-   <body>
-     <h1>Help Page</h1>
-     <p>First Example Using html</p>
-   </body>
- </html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+
+<body>
+  <h1>Help Page</h1>
+  <p>First Example Using HTML</p>
+</body>
+
+</html>
